--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(Sheets)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Sheets main.cpp)
+include_directories(Sheets)
+
+add_subdirectory(SheetsCore)
+add_subdirectory(SheetsCore.Tests)
+
+set(SOURCE_FILES Cli/main.cpp)
+add_executable(SheetsRun ${SOURCE_FILES})
+
+target_link_libraries(SheetsRun SheetsCore)
