--- a/SheetsCore/CMakeLists.txt
+++ b/SheetsCore/CMakeLists.txt
@@ -3,4 +3,10 @@ project(SheetsCore)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(SheetsCore INTERFACE)
+set(SOURCE_FILES src/IntegerTableCell.cpp)
+
+include_directories(${PROJECT_SOURCE_DIR}/include/)
+
+add_library(SheetsCore STATIC ${SOURCE_FILES})
+
+target_include_directories(SheetsCore INTERFACE ${PROJECT_SOURCE_DIR}/include/)
