--- a/SheetsCore.Tests/CMakeLists.txt
+++ b/SheetsCore.Tests/CMakeLists.txt
@@ -3,8 +3,7 @@ project(SheetsCore.Tests)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(lib/catch2)
-include_directories(../SheetsCore)
+set(SOURCE_FILES TableCellTests.cpp main.cpp)
+add_executable(SheetsCore.Tests ${SOURCE_FILES})
 
-set(SOURCE_FILES main.cpp)
-add_executable(SheetsCore.TestsRun ${SOURCE_FILES})
+target_link_libraries(SheetsCore.Tests PRIVATE Catch SheetsCore)
