--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(Sheets)
 set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(SheetsCore)
+add_subdirectory(Cli)
+add_subdirectory(Utils)
 add_subdirectory(SheetsCore.Tests)
 add_subdirectory(lib/catch)
