--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ project(Sheets)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(SheetsCore)
+add_subdirectory(Core)
 add_subdirectory(Cli)
 add_subdirectory(Utils)
+add_subdirectory(Serialization)
 add_subdirectory(Tests)
 add_subdirectory(lib/catch)
