--- a/Serialization/CMakeLists.txt
+++ b/Serialization/CMakeLists.txt
@@ -9,6 +9,6 @@ include_directories(${PROJECT_SOURCE_DIR}/include/)
 
 add_library(Serialization STATIC ${SOURCE_FILES})
 
-target_link_libraries(Serialization PRIVATE Core)
+target_link_libraries(Serialization PRIVATE Core Utils)
 
 target_include_directories(Serialization INTERFACE ${PROJECT_SOURCE_DIR}/include/)
