Create src folder for projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(Sheets)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(Core)
-add_subdirectory(Cli)
-add_subdirectory(Utils)
-add_subdirectory(Serialization)
-add_subdirectory(Tests)
+add_subdirectory(src/Core)
+add_subdirectory(src/Cli)
+add_subdirectory(src/Utils)
+add_subdirectory(src/Serialization)
+add_subdirectory(src/Tests)
 add_subdirectory(lib/catch)
